editor-components/slider/slider7/slider7.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content {
    display: flex;
    flex-direction: column;
    gap: var(--composer-gap-lg);
    position: relative;

    .vertical-content {
      align-items: center;
      padding: 0 var(--composer-gap-xl);

      .subtitle {
        transform: translateY(0);

        &::before {
          background: none;
        }
      }

      .title,
      .description {
        text-align: center;
      }

      .button-container {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        gap: var(--composer-gap-sm);

        .button {
          .button-text {
            content: "";
          }

          .button-icon {
            line-height: 0;
          }
        }
      }
    }

    .nextArrow,
    .prevArrow {
      position: absolute;
      cursor: pointer;
      top: 50%;
      transform: translateY(-50%);
      z-index: 10;
      color: #ffffff;
      padding: var(--composer-gap-md) var(--composer-gap-xl);
      display: flex;
      justify-content: center;
      align-items: center;

      .arrow-icon {
        width: 2.5rem;
        height: 2.5rem;
        font-size: 2.5rem;
        object-fit: contain;
        display: flex;
        justify-content: center;
        align-items: center;
      }
    }

    .prevArrow {
      left: 0;
    }

    .nextArrow {
      right: 0;
    }

    .carousel-wrapper {
      width: 100%;
      position: relative;
    }

    .carousel {
      width: 100%;

      :global(.slick-center) {
        .card.centerSlide {
          transform: scale(1);
          transition: transform var(--composer-transition-duration-normal) ease;
        }
      }

      :global(.slick-dots) {
        position: relative;
        display: flex !important;
        justify-content: center;
        align-items: center;
        bottom: -35px;

        li {
          margin: 0 var(--composer-gap-sm);
          width: var(--composer-gap-sm);
          height: var(--composer-gap-sm);

          button {
            width: var(--composer-gap-sm);
            height: var(--composer-gap-sm);
            position: relative;

            &:before {
              content: "";
              width: var(--composer-gap-sm);
              height: var(--composer-gap-sm);
              border-radius: var(--composer-border-radius-full);
              background: var(--composer-font-color-primary);
              opacity: 0.5;
              transition: transform var(--composer-transition-duration-normal) ease, opacity var(--composer-transition-duration-normal) ease;
              transform: scale(0.8);
              line-height: unset;
            }
          }

          &:global(.slick-active) {
            button:before {
              transform: scale(1.2);
              opacity: 1;
            }
          }
        }
      }

      .card {
        height: 22rem;
        overflow: hidden;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        transition: transform var(--composer-transition-duration-normal);
        transform: scale(0.8);
        z-index: 1;
        border-radius: var(--composer-border-radius-xs);

        .imgContainer {
          position: relative;
          width: 30rem;
          height: 100%;
          overflow: hidden;
          z-index: 1;

          .image {
            position: absolute;
            width: 100%;
            height: 100%;
            object-fit: cover;
            transform: scale(1.1);
            transform-origin: center;
            z-index: 1;
            transition: transform var(--composer-transition-duration-slow) ease, filter var(--composer-transition-duration-slow) ease;
          }

          .overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background-color: var(--composer-overlay-color);
            z-index: 2;
          }
        }

        &.hover-active {
          &:hover {
            .image {
              transform: scale(1);
              filter: brightness(80%);
            }
          }

          &:not(:hover) {
            .image {
              transform: scale(1.1);
              filter: brightness(100%);
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .vertical-content {
        padding: 0 var(--composer-gap-lg);
      }

      .nextArrow,
      .prevArrow {
        padding: var(--composer-gap-md) var(--composer-gap-lg);

        .arrow-icon {
          width: 1.5rem;
          height: 1.5rem;
          font-size: 1.5rem;
        }
      }

      .carousel {
        .card {
          width: 100%;
          height: 22rem;
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {

      .vertical-content {
        padding: 0 var(--composer-gap-md);
      }

      .nextArrow,
      .prevArrow {
        padding: var(--composer-gap-md);
      }

      .carousel {
        .card {
          .imgContainer {
            width: 100%;
          }
        }

        :global(.slick-dots) {
          bottom: -30px;

          li {
            margin: 0 var(--composer-gap-xs);

            button:before {
              transform: scale(0.6);
            }

            &:global(.slick-active) {
              button:before {
                transform: scale(0.8);
              }
            }
          }
        }
      }
    }
  }
}

