fix: In Slider 7 on mobile view, when the subtitle is longer than one line, its alignment shifts to the left

--- a/editor-components/slider/slider7/slider7.module.scss
+++ b/editor-components/slider/slider7/slider7.module.scss
@@ -13,6 +13,7 @@
 
       .subtitle {
         transform: translateY(0);
+        text-align: center;
 
         &::before {
           background: none;
